kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: homework
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx:1.27.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: empty-volume
          mountPath: /homework
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 8000
      volumes:
      - name: empty-volume
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
