kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1index.html
  name: web
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
        - path: /index.html
          pathType: ImplementationSpecific
          backend:
            service:
              name: web
              port:
                number: 8000
        - path: /homepage(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: web
              port:
               number: 8000
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: web
              port:
                number: 8000
